--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Task Manager</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="todo-app">
-            <h2>To-Do List <img src="images/icon.png" alt="Todo Icon"></h2>
-            <div class="row">
-                <input type="text" id="input-box" placeholder="Add your task">
-                <button onclick="addTask()">Add</button>
-            </div>
-            <ul id="list-container">
-                <!-- Tasks will be added here dynamically via JavaScript -->
-            </ul>
+        <h1>Task Manager</h1>
+        <div class="input-section">
+            <input type="text" id="taskInput" placeholder="Add a new task...">
+            <input type="date" id="dueDateInput">
+            <button id="addTaskBtn">Add Task</button>
         </div>
+        <ul id="taskList">
+            <!-- Tasks will be added here by JavaScript -->
+        </ul>
     </div>
     <script src="script.js"></script>
 </body>
